<?xml version="1.0" encoding="UTF-8"?>
<project>
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.github.tors42</groupId>
    <artifactId>charibot</artifactId>
    <version>0.0.1-SNAPSHOT</version>

    <packaging>jlink</packaging>

    <dependencies>
        <dependency>
            <groupId>io.github.tors42</groupId>
            <artifactId>chariot</artifactId>
            <version>0.1.8</version>
        </dependency>
    </dependencies>

    <properties>
        <maven.compiler.release>23</maven.compiler.release>
        <source.jdk>${env.JAVA_HOME}</source.jdk>
        <os.arch.classifier>${os.name}-${os.arch}</os.arch.classifier>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jlink-plugin</artifactId>
                <version>3.2.0</version>
                <extensions>true</extensions>
                <configuration>
                    <sourceJdkModules>${source.jdk}</sourceJdkModules>
                    <classifier>${os.arch.classifier}</classifier>
                    <launcher>bot=charibot/bot.Bot</launcher>
                    <addOptions>
                        <addOption>--enable-preview</addOption>
                    </addOptions>
                    <addModules>
                        <addModule>jdk.jfr</addModule>
                        <addModule>jdk.jcmd</addModule>
                    </addModules>
                    <compress>zip-9</compress>
                    <noHeaderFiles>true</noHeaderFiles>
                    <noManPages>true</noManPages>
                    <!--<stripDebug>true</stripDebug>-->
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <compilerArgs>
                        <compilerArg>--enable-preview</compilerArg>
                    </compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
